Fix word overflow on mobile.

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -173,6 +173,7 @@ body {
 #post,
 #page {
 	.entry-content {
+		word-wrap: break-word;
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
 		background-color: @white;
